# flowgen

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  Cargo.toml  README.MD  config.example.yaml
.github/: CODEOWNERS
.github/workflows/: flowgen-release.yml  helm-release.yml  test-build-push.yml
charts/flowgen/: Chart.yaml  values.yaml
charts/flowgen/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  rbac.yaml  service.yaml  serviceaccount.yaml
codegen/salesforce_pubsub/: Cargo.toml
codegen/salesforce_pubsub/src/: lib.rs
components/core/src/: service.rs
components/flowgen/src/: core.rs  service.rs
components/google/: build.rs
components/google/src/: lib.rs
components/nats/src/: client.rs  lib.rs
components/nats/src/jetstream/: config.rs  publisher.rs
components/salesforce/: Cargo.toml  build.rs
components/salesforce/src/: auth.rs  client.rs  eventbus.v1.rs  lib.rs  pubsub.rs
components/salesforce/src/pubsub/: config.rs  context.rs  subscriber.rs
crates/core/: Cargo.toml
crates/core/src/: client.rs  config.rs  event.rs  input.rs  lib.rs  message.rs  recordbatch.rs  render.rs  serde.rs  service.rs
crates/core/src/config/: input.rs
crates/core/src/convert/: recordbatch.rs  render.rs  serde.rs
crates/core/src/render/: config.rs
crates/core/src/stream/: event.rs  publisher.rs
crates/core/src/task/: runner.rs
crates/core/src/task/enumerate/: config.rs  processor.rs
crates/core/src/task/generate/: subscriber.rs
crates/core/src/task/render/: config.rs  processor.rs
crates/deltalake/: Cargo.toml
crates/deltalake/src/: client.rs  config.rs  event.rs  lib.rs  publisher.rs  schema.rs  writer.rs
crates/file/: Cargo.toml
crates/file/src/: config.rs  publisher.rs  reader.rs  subscriber.rs  writer.rs
crates/flowgen/: Cargo.toml
crates/flowgen/src/: config.rs  flow.rs  lib.rs
crates/generate/: Cargo.toml
crates/generate/src/: config.rs  subscriber.rs
crates/google/: Cargo.toml  build.rs
crates/google/src/: client.rs  lib.rs
crates/google/src/storage/: config.rs  context.rs  subscriber.rs
crates/http/: Cargo.toml
crates/http/src/: config.rs  processor.rs
crates/nats/: Cargo.toml
crates/nats/src/: client.rs  lib.rs
crates/nats/src/jetstream/: config.rs  context.rs  message.rs  publisher.rs  subscriber.rs
crates/nats/src/jetstream/object_store/: config.rs  subscriber.rs
crates/object-store/src/: client.rs  writer.rs
crates/salesforce/: Cargo.toml  build.rs
crates/salesforce/src/: client.rs  lib.rs
crates/salesforce/src/pubsub/: config.rs  context.rs  publisher.rs  subscriber.rs
deploy/: flowgen.yaml
deploy/flows/: account_sf_query_job_creator.json  account_sf_query_job_retriever.json  account_sf_query_job_writer.json
deployment/: docker-rust-kubernetes.yaml
docker/: Dockerfile
examples/: Cargo.toml
examples/event-relay/src/: main.rs
examples/event-store/: Cargo.toml
examples/event-store/src/: main.rs
examples/salesforce/pubsub/: salesforce_pubsub_account_subscriber.yaml  salesforce_pubsub_account_writer.yaml
examples/salesforce/query/: account_salesforce_query_job_create.yaml  salesforce_bulkapi_query_account.yaml  salesforce_bulkapi_query_account_create.yaml  salesforce_bulkapi_query_account_retrieve.yaml
examples/src/google/storage/: main.rs
examples/src/salesforce/pubsub/: main.rs
flowgen/: Cargo.toml  build.rs
flowgen-worker/app/src/: app.rs  config.rs  flow.rs
flowgen-worker/core/: Cargo.toml
flowgen-worker/core/src/: cache.rs  event.rs  lib.rs  retry.rs  service.rs
flowgen-worker/core/src/host/: k8s.rs  mod.rs
flowgen-worker/core/src/task/: context.rs  manager.rs
flowgen-worker/core/src/task/convert/: config.rs  processor.rs
flowgen-worker/core/src/task/generate/: config.rs  subscriber.rs
flowgen-worker/core/src/task/iterate/: config.rs  processor.rs
flowgen-worker/core/src/task/log/: config.rs  processor.rs
flowgen-worker/core/src/task/script/: config.rs  processor.rs
flowgen-worker/http/: Cargo.toml
flowgen-worker/http/src/: config.rs  request.rs  server.rs  webhook.rs
flowgen-worker/nats/: Cargo.toml
flowgen-worker/nats/src/: cache.rs  client.rs  lib.rs
flowgen-worker/nats/src/jetstream/: config.rs  message.rs  publisher.rs  stream.rs  subscriber.rs
flowgen-worker/object-store/: Cargo.toml
flowgen-worker/object-store/src/: client.rs  config.rs  reader.rs  writer.rs
flowgen-worker/salesforce/: Cargo.toml
flowgen-worker/salesforce/src/: client.rs  lib.rs
flowgen-worker/salesforce/src/bulkapi/: config.rs  job.rs  job_creator.rs  job_retriever.rs  lib.rs  processor.rs
flowgen-worker/salesforce/src/pubsub/: config.rs  context.rs  publisher.rs  subscriber.rs
flowgen-worker/salesforce/src/query/: job_creator.rs  job_retriever.rs
flowgen/src/: app.rs  config.rs  core.rs  flow.rs  lib.rs  main.rs
scripts/: build.sh
