[workspace]
members = ["flowgen"]
resolver = "2"
exclude = [".cargo"]

[workspace.package]
version = "0.0.1"
authors = ["CONNVE"]
license = "MIT"
edition = "2021"
publish = false

[workspace.dependencies]
bytes = { version = "1.9.0" }
handlebars = { version = "6.3.0" }
arrow = { version = "54" }
arrow-json = { version = "54" }
chrono = { version = "0.4.39" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = { version = "1.0.111" }
tokio = { version = "1.35.1" }
tokio-stream = { version = "0.1.14" }
thiserror = { version = "1.0.63" }
futures-util = { version = "0.3.30" }
futures = { version = "0.3.30" }
reqwest = { version = "0.12.11" }
url = { version = "2.5.2" }
async-nats = { version = "0.35.1" }
bincode = { version = "1.3.3" }
tonic = { version = "0.10.2", features = ["tls-roots"] }
deltalake = { version = "0.25", features = ["datafusion"] }
deltalake-gcp = "0.9.0"
config = "0.15.11"
serde_avro_fast = "1.1.2"
oauth2 = "4.4.2"
prost = "0.12.3"
glob = "0.3.1"
