[workspace]
members = ["flowgen-worker/app"]
resolver = "2"
exclude = [".cargo"]

[workspace.package]
version = "0.5.0"
authors = ["CONNVE"]
license = "MPL-2.0"
edition = "2021"
publish = false

[workspace.dependencies]
salesforce_core = { git = "https://github.com/connve-labs/salesforce-rs" }
salesforce_pubsub_v1 = { git = "https://github.com/connve-labs/salesforce-rs" }
object_store = { version = "0.12.3", features = ["gcp", "fs"] }
bytes = { version = "1.9.0" }
handlebars = { version = "6.3.0" }
arrow = { version = "54" }
arrow-json = { version = "54" }
chrono = { version = "0.4.39" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3.20" }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = { version = "1.0.111" }
tokio = { version = "1.35.1" }
tokio-stream = { version = "0.1.14" }
thiserror = { version = "1.0.63" }
futures-util = { version = "0.3.30" }
futures = { version = "0.3.30" }
reqwest = { version = "0.12.11", features = ["json"] }
url = { version = "2.5.2" }
async-nats = { version = "0.35.1" }
bincode = { version = "1.3.3" }
tonic = { version = "0.14.2", features = ["tls-native-roots"] }
config = "0.15.11"
serde_avro_fast = "2.0.0"
oauth2 = "4.4.2"
prost = "0.13"
glob = "0.3.1"
apache-avro = "0.19.0"
regex = "1.11.1"
axum = "0.8.4"
base64 = "0.22"
async-trait = "0.1"
kube = { version = "0.99", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.24", features = ["v1_32"] }
rhai = { version = "1.20", features = ["sync", "serde"] }
