[package]
name = "flowgen"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "flowgen"
path = "src/main.rs"


[dependencies]
serde_avro_fast = "1.1.2"
oauth2 = "4.4.2"
flowgen_core = { path = "../crates/core" }
flowgen_deltalake = { path = "../crates/deltalake" }
flowgen_http = { path = "../crates/http" }
flowgen_generate = { path = "../crates/generate" }
flowgen_salesforce = { path = "../crates/salesforce" }
flowgen_file = { path = "../crates/file" }
flowgen_nats = { path = "../crates/nats" }
prost = "0.12.3"
reqwest = { version = "0.11.23", features = ["json", "stream"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = { version = "1.0.111" }
tonic = { version = "0.10.2", features = ["tls-roots"] }
tokio = { version = "1.35.1", features = ["full"] }
bytes = "1.5.0"
futures-util = "0.3.30"
tokio-stream = "0.1.14"
tokio-util = "0.7.10"
tracing = "0.1"
tracing-subscriber = "0.3"
unicode-normalization = "0.1.23"
async-nats = "0.35.1"
bincode = "1.3.3"
toml = "0.8.19"
thiserror = "1.0.63"
futures = "0.3.30"
chrono = "0.4.38"
glob = "0.3.1"
google-cloud-auth = { git = "https://github.com/googleapis/google-cloud-rust" }
arrow = "53.3.0"
