[package]
name = "flowgen"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "flowgen"
path = "src/main.rs"


[dependencies]
flowgen_core = { path = "../crates/core" }
flowgen_deltalake = { path = "../crates/deltalake" }
flowgen_http = { path = "../crates/http" }
flowgen_salesforce = { path = "../crates/salesforce" }
flowgen_file = { path = "../crates/file" }
flowgen_nats = { path = "../crates/nats" }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
futures-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
arrow = { workspace = true }
config = { workspace = true }
glob = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
