[package]
name = "flowgen"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "flowgen"
path = "src/main.rs"


[dependencies]
flowgen_core = { path = "../flowgen-worker/core" }
flowgen_deltalake = { path = "../flowgen-worker/deltalake" }
flowgen_http = { path = "../flowgen-worker/http" }
flowgen_salesforce = { path = "../flowgen-worker/salesforce" }
flowgen_nats = { path = "../flowgen-worker/nats" }
flowgen_object_store = { path = "../flowgen-worker/object-store" }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
futures-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
arrow = { workspace = true }
config = { workspace = true }
glob = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
