
[package]
name = "salesforce_pubsub"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "salesforce_pubsub"
path = "src/lib.rs"

[dependencies]
oauth2 = "4.4.2"
prost = "0.12.3"
prost-types = "0.12.3"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = { version = "1.0.111" }
tonic = "0.10.2"
bytes = "1.5.0"
tokio = "1.35.1"
futures-util = "0.3.30"
tokio-stream = "0.1.14"
tokio-util = "0.7.10"
thiserror = "1.0.63"
url = "2.5.2"

[build-dependencies]
tonic-build = "0.10.2"
