[package]
name = "flowgen_core"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "flowgen_core"
path = "src/lib.rs"

[dependencies]
tonic = { version = "0.10.2", features = ["tls-roots"] }
thiserror = "1.0.63"
url = "2.5.2"
