[package]
name = "flowgen_core"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "flowgen_core"
path = "src/lib.rs"

[dependencies]
tonic = { version = "0.10.2", features = ["tls-roots"] }
arrow = "54.0.0"
async-nats = "0.35.1"
salesforce_pubsub = { path = "../salesforce_pubsub" }
bincode = "1.3.3"
thiserror = "1.0.63"
url = "2.5.2"
bytes = "1.9.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = { version = "1.0.111" }
handlebars = { workspace = true }
arrow-json = { workspace = true }
