[package]
name = "flowgen_core"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "flowgen_core"
path = "src/lib.rs"

[dependencies]
arrow = { workspace = true }
apache-avro = { workspace = true }
tonic = { workspace = true }
async-nats = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
handlebars = { workspace = true }
arrow-json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
futures-util = { workspace = true }
regex = { workspace = true }
