[package]
name = "flowgen_deltalake"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "flowgen_deltalake"
path = "src/lib.rs"

[dependencies]
serde_json = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true }
flowgen_core = { path = "../core" }
handlebars = { workspace = true }
arrow-json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
deltalake = { workspace = true }
deltalake-gcp = { workspace = true }
