[package]
name = "flowgen_file"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "flowgen_file"
path = "src/lib.rs"

[dependencies]
flowgen_core = { path = "../core" }
tokio = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
arrow = { workspace = true }
