
[package]
name = "flowgen_generate"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "flowgen_generate"
path = "src/lib.rs"

[dependencies]
flowgen_core = { path = "../core" }
tokio = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
