
[package]
name = "flowgen_http"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "flowgen_http"
path = "src/lib.rs"

[dependencies]
oauth2 = "4.4.2"
prost = "0.12.3"
prost-types = "0.12.3"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = { version = "1.0.111" }
arrow = "54.0.0"
tonic = "0.10.2"
bytes = "1.5.0"
tokio = "1.35.1"
futures-util = "0.3.30"
tokio-stream = "0.1.14"
tokio-util = "0.7.10"
thiserror = "1.0.63"
url = "2.5.2"
reqwest = "0.12.11"
flowgen_core = { path = "../core" }
handlebars = { workspace = true }
arrow-json = { workspace = true }
