
[package]
name = "flowgen_http"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "flowgen_http"
path = "src/lib.rs"

[dependencies]
serde_json = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true }
flowgen_core = { path = "../core" }
handlebars = { workspace = true }
arrow-json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
axum = {workspace = true}
base64 = { workspace = true }
async-trait = { workspace = true }
tokio-retry = { workspace = true }