[package]
name = "flowgen_nats"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "flowgen_nats"
path = "src/lib.rs"

[dependencies]
oauth2 = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tonic = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
futures-util = { workspace = true }
tokio-stream = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
flowgen_core = { path = "../core" }
arrow = { workspace = true }
async-nats = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
bincode = { workspace = true }
tokio-retry = { workspace = true }
