[package]
name = "flowgen_salesforce"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "flowgen_salesforce"
path = "src/lib.rs"

[dependencies]
futures-util = { workspace = true }
tokio-stream = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
flowgen_core = { path = "../core" }
salesforce_core = { workspace = true }
salesforce_pubsub_v1 = { workspace = true }
oauth2 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true }
bincode = { workspace = true }
arrow = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
apache-avro = { workspace = true }
reqwest = { workspace = true }
serde_avro_fast = { workspace = true }
async-trait.workspace = true
